# Pool

./: readme.md
CommonConnectionPool/: CMakeLists.txt  README.md
CommonConnectionPool/config/: mysql.ini
CommonConnectionPool/include/: CommonConnectionPool.h  Connection.h
CommonConnectionPool/src/: CommonConnectionPool.cpp  Connection.cpp  main.cpp
DBConnPool/: CMakeLists.txt
DBConnPool/config/: mysql.ini
DBConnPool/example/: CMakeLists.txt  Readme.md  connpooltest.cpp  main.cpp
DBConnPool/include/: ConnPool.h  Connection.h
DBConnPool/include/mysql/: mysql_version.h  mysqlx_version.h
DBConnPool/lib/mysql/: INFO_BIN  INFO_SRC  libmysqlclient.so.21
DBConnPool/src/: CMakeLists.txt  ConnPool.cpp  Connection.cpp
ThreadPool/: .gitignore  CMakeLists.txt  README.md  autobuild.sh
ThreadPool/example/: CMakeLists.txt  main.cpp
ThreadPool/include/ThreadPool/: safequeue.hpp  threadpool.h
ThreadPool/src/: CMakeLists.txt  threadpool.cpp
